// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component closes the first tab and opens any clicked tab 1`] = `
<div>
  <h1>
    This is a Event Handler and Conditionals Drill: Tabs
  </h1>
  <div
    className="content"
  >
    <button
      key="0"
      onClick={[Function]}
    >
      First tab
    </button>
    <button
      key="1"
      onClick={[Function]}
    >
      Second tab
    </button>
    <button
      key="2"
      onClick={[Function]}
    >
      Third tab
    </button>
    <div
      className="content"
    >
      <p>
         
        This is a another for sentence for you.
         
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs Component renders empty given no tabs 1`] = `
<div>
  <h1>
    This is a Event Handler and Conditionals Drill: Tabs
  </h1>
  0
</div>
`;

exports[`Tabs Component renders the first tab by default 1`] = `
<div>
  <h1>
    This is a Event Handler and Conditionals Drill: Tabs
  </h1>
  <div
    className="content"
  >
    <button
      key="0"
      onClick={[Function]}
    >
      First tab
    </button>
    <button
      key="1"
      onClick={[Function]}
    >
      Second tab
    </button>
    <button
      key="2"
      onClick={[Function]}
    >
      Third tab
    </button>
    <div
      className="content"
    >
      <p>
         
        This is a sentence for Matt Dizzle
         
      </p>
    </div>
  </div>
</div>
`;
